force-app/main/default/objects/trailheadapp__User_Badge__c/fields/trailheadapp__Archived__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>L&apos;enregistrement a été archivé et n&apos;est plus disponible.</inlineHelpText>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>