force-app/main/default/objects/trailheadapp__User_Badge__c/fields/trailheadapp__Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Assigned_Date__c</fullName>
    <inlineHelpText>Représente la date à laquelle le badge est attribué afin de suivre l&apos;activité d&apos;un utilisateur avant qu&apos;il ne commence à essayer de l&apos;obtenir.</inlineHelpText>
    <label>Assigned On Date</label>
    <type>DateTime</type>
</CustomField>