force-app/main/default/objects/trailheadapp__User_Badge__c/fields/trailheadapp__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Due_Date__c</fullName>
    <inlineHelpText>Représente la date d&apos;échéance du badge afin de suivre le temps qu&apos;il reste à un utilisateur pour l&apos;obtenir.</inlineHelpText>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>